Added to html5 skeleton H1 google font API + jQuery Change Background Colors On Scroll

--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
 		<meta name="author" content="Clas-design">
 	    <title></title>
 
-	    <!-- Fav Icon -->
-	    <link rel="shortcut icon" href="assets/images/favicon.ico">
+	    <!-- Fav Icon 
+	    <link rel="shortcut icon" href="images/favicon.ico">-->
 
 	    <!-- SCROLLS -->
 	    <!-- load css and fontawesome-->
+	    <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />-->
+	    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 	    <link rel="stylesheet" href="css/pd.yeap.css" />
-	    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
 
 
 	    <!-- SPELLS -->
 	    <!-- load JS Files: on this 1 js file, I have shrunk angular-route, angular, bootstrap, jQuery and my js files  -->
-	    <script src="js/pd.yeap.js"></script>
+	    <script type="text/javascript" src="js/jquery.js"></script>
+	    <script type="text/javascript" src="js/pd.yeap.js"></script>
     </head>
 
     <body>
@@ -40,10 +42,10 @@
 
         <!-- SECTIONS AND INJECTED VIEWS -->
         <!-- Section basic reseller -->
-        <section id="">
+        <section id="basic-reseller" data-color="#E74C3C">
         	<div class="container">
 	        	<header>
-	        		<h1></h1>
+	        		<h1>Basic Reseller</h1>
 	        		<hr class="">
 	        	</header>
 	        	<div class="row">
@@ -56,13 +58,14 @@
 		        	</article>
 	        	</div> <!-- End row -->
         	</div> <!-- End container -->
+        	<div class="clear"></div>
         </section>
 
         <!-- Section pro reseller -->
-        <section id="">
+        <section id="pro-reseller" data-color="#18BC9C">
         	<div class="container-fluid">
 	        	<header>
-	        		<h1></h1>
+	        		<h1>Pro Reseller</h1>
 	        		<hr class="">
 	        	</header>
 	        	<div class="row">
@@ -75,13 +78,14 @@
 		        	</article>
 	        	</div> <!-- End row -->
         	</div> <!-- End container -->
+        	<div class="clear"></div>
         </section>
 
-        <!-- Section basic support -->
-        <section id="">
+        <!-- Section support -->
+        <section id="support" data-color="#3498DB">
         	<div class="container">
 	        	<header>
-	        		<h1></h1>
+	        		<h1>Customer Support</h1>
 	        		<hr class="">
 	        	</header>
 	        	<div class="row">
@@ -94,13 +98,14 @@
 		        	</article>
 	        	</div> <!-- End row -->
         	</div> <!-- End container -->
+        	<div class="clear"></div>
         </section>
 
         <!-- Section basic my account -->
-        <section id="">
+        <section id="my-account" data-color="#E74C3C">
         	<div class="container-fluid">
 	        	<header>
-	        		<h1></h1>
+	        		<h1>My Account</h1>
 	        		<hr class="">
 	        	</header>
 	        	<div class="row">
@@ -113,6 +118,7 @@
 		        	</article>
 	        	</div> <!-- End row -->
         	</div> <!-- End container -->
+        	<div class="clear"></div>
         </section>
 
         <!-- FOOTER-->
