Added smooth scrolling to the # links using jQuery and added font-awesome caret up and down

--- a/index.html
+++ b/index.html
@@ -18,14 +18,19 @@
 
 	    <!-- SCROLLS -->
 	    <!-- load css and fontawesome-->
-	    <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />-->
+	    <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
+	    -->
 	    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+	    <link rel="stylesheet" type="text/css" href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+		<link rel="stylesheet" type="text/css" href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.9/font-awesome-animation.min.css'>
+		
 	    <link rel="stylesheet" href="css/pd.yeap.css" />
 
 
 	    <!-- SPELLS -->
 	    <!-- load JS Files: on this 1 js file, I have shrunk angular-route, angular, bootstrap, jQuery and my js files  -->
 	    <script type="text/javascript" src="js/jquery.js"></script>
+	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>	    
 	    <script type="text/javascript" src="js/pd.yeap.js"></script>
     </head>
 
@@ -57,11 +62,15 @@
 				  <source src="video/yeap-header.ogg" type="video/ogg">
 			</video>
 			
-			  <article class="container">
+			  <article class="container-fluid">
 			    <div class="row hd-video-text">
 			      <div class="col-md-12 text-center">
 			        <h1>Yeap Network</h1>
 			      </div>
+			    <div class="row text-center">
+			    	<a href="#basic-reseller">
+			      		<div class="col-md-offset-11 fa fa-caret-down faa-bounce animated aria-hidden='true'"></div>
+			      	</a>
 			    </div>
 			  </article>
         </header>
@@ -83,6 +92,19 @@
             			<!-- this is where content will be injected -->
 		        	</article>
 	        	</div> <!-- End row -->
+	        	<!-- Font-awesome carets -->
+	        	<div class="row text-left">
+	        		<div class="col-md-1">
+				    	<a href="#hd-background">
+				      		<div class="fa fa-caret-up aria-hidden='true'"></div>
+				      	</a>
+				    </div>
+				    <div class="col-md-offset-11 text-right">
+				    	<a class="text-right" href="#pro-reseller">
+				      		<div class="fa fa-caret-down aria-hidden='true'"></div>
+				      	</a>
+				    </div>
+			    </div> <!-- End font-awesome row -->
         	</div> <!-- End container -->
         	<div class="clear"></div>
         </section>
@@ -103,6 +125,19 @@
             			<!-- this is where content will be injected -->
 		        	</article>
 	        	</div> <!-- End row -->
+	        	<!-- Font-awesome carets -->
+	        	<div class="row text-left">
+	        		<div class="col-md-1">
+				    	<a href="#basic-reseller">
+				      		<div class="fa fa-caret-up aria-hidden='true'"></div>
+				      	</a>
+				    </div>
+				    <div class="col-md-offset-11 text-center">
+				    	<a class="text-right" href="#support">
+				      		<div class="fa fa-caret-down aria-hidden='true'"></div>
+				      	</a>
+				    </div>
+			    </div> <!-- End font-awesome row -->
         	</div> <!-- End container -->
         	<div class="clear"></div>
         </section>
@@ -123,6 +158,19 @@
             			<!-- this is where content will be injected -->
 		        	</article>
 	        	</div> <!-- End row -->
+	        	<!-- Font-awesome carets -->
+	        	<div class="row text-left">
+	        		<div class="col-md-1">
+				    	<a href="#pro-reseller">
+				      		<div class="fa fa-caret-up aria-hidden='true'"></div>
+				      	</a>
+				    </div>
+				    <div class="col-md-offset-11 text-right">
+				    	<a class="text-right" href="#my-account">
+				      		<div class="fa fa-caret-down aria-hidden='true'"></div>
+				      	</a>
+				    </div>
+			    </div> <!-- End font-awesome row -->
         	</div> <!-- End container -->
         	<div class="clear"></div>
         </section>
@@ -143,6 +191,19 @@
             			<!-- this is where content will be injected -->
 		        	</article>
 	        	</div> <!-- End row -->
+	        	<!-- Font-awesome carets -->
+	        	<div class="row text-left">
+	        		<div class="col-md-1">
+				    	<a href="#support">
+				      		<div class="fa fa-caret-up aria-hidden='true'"></div>
+				      	</a>
+				    </div>
+				    <div class="col-md-offset-11 text-center">
+				    	<a class="text-right" href="#contact">
+				      		<div class="fa fa-caret-down aria-hidden='true'"></div>
+				      	</a>
+				    </div>
+			    </div> <!-- End font-awesome row -->
         	</div> <!-- End container -->
         	<div class="clear"></div>
         </section>
@@ -151,7 +212,7 @@
         <section id="contact" data-color="#F88F18">
         	<div class="container">
 	        	<header>
-	        		<h1>My Account</h1>
+	        		<h1>Contact us</h1>
 	        		<hr class="">
 	        	</header>
 	        	<div class="row">
@@ -163,15 +224,33 @@
             			<!-- this is where content will be injected -->
 		        	</article>
 	        	</div> <!-- End row -->
+	        	<!-- Font-awesome carets -->
+	        	<div class="row text-left">
+	        		<div class="col-md-1">
+				    	<a href="#my-account">
+				      		<div class="fa fa-caret-up aria-hidden='true'"></div>
+				      	</a>
+				    </div>
+				    <div class="col-md-offset-11 text-right">
+				    	<a class="text-right" href="#footer">
+				      		<div class="fa fa-caret-down aria-hidden='true'"></div>
+				      	</a>
+				    </div>
+			    </div> <!-- End font-awesome row -->
         	</div> <!-- End container -->
         	<div class="clear"></div>
         </section>
 
         <!-- FOOTER-->
         <footer id="footer">
-        	
+        	<article class="container-fluid">        		
         		<p>@ Yeap Network 2017, all right reserved, developed by <a href="http://dhaiti.pro/" target="-blank">Peter DHaiti</a></p>
-        	
+        		<div class="row text-center">
+			    	<a href="#hd-background">
+			      		<div class="col-md-12 fa fa-caret-up faa-bounce animated aria-hidden='true'"></div>
+			      	</a>
+			    </div>
+			</article>       	
         </footer>
 
     </body>
