--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	    <!-- load css and fontawesome-->
 	    <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
 	    -->
-	    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+	    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Fugaz+One|Ultra" rel="stylesheet">
 	    <link rel="stylesheet" type="text/css" href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 		<link rel="stylesheet" type="text/css" href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.9/font-awesome-animation.min.css'>
 		
@@ -30,6 +30,7 @@
 	    <!-- SPELLS -->
 	    <!-- load JS Files: on this 1 js file, I have shrunk angular-route, angular, bootstrap, jQuery and my js files  -->
 	    <script type="text/javascript" src="js/jquery.js"></script>
+	    <script type="text/javascript" src="js/typeit.js"></script>
 	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>	    
 	    <script type="text/javascript" src="js/pd.yeap.js"></script>
     </head>
@@ -49,11 +50,14 @@
 				    <li><a href="#contact">Contact us</a></li>
 				  </ul>
 			</div>
-			  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+			<div class="container-fluid">
+				<div class="row">
+					  <span class="col-md-1" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+					<div class="col-md-offset-10 text-right" id="logo"><a href="http://yeapnetwork.net"><img class="img-rounded" src="img/logo.jpg"></a></div>
+				</div>
+			</div>
         </nav>
-        
-
-
+		      
         <!-- HEADER VIDEO COVER-->
         <header>
          	<!-- Header Full Screen Video Background -->
@@ -66,6 +70,18 @@
 			    <div class="row hd-video-text">
 			      <div class="col-md-12 text-center">
 			        <h1>Yeap Network</h1>
+			        <h2>Hosting and App Services Business Opportunity</h2>
+			        <!-- Add typeit - a jQuery plugin that allows auto-typing texts -->
+			        <h3 id="auto-typing"></h3> 
+					<script type="text/javascript">
+                   		$('#auto-typing').typeIt({
+						     strings: [".RELIABLE .SCALABLE .EFICIENT", ".SECURE .SUSTAINABLE", "YOU ARE A MOMENT AWAY TO BECOME A CERTIFIED HOSTING RESELLER"],
+						     speed: 250,
+						     breakLines: false,
+						     loopDelay: 500
+						});
+					</script>
+
 			      </div>
 			    <div class="row text-center">
 			    	<a href="#basic-reseller">
