--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <body>
 
         <!-- NAVBAR -->
-        <nav class="navbar navbar-inverse navbar-default navbar-fixed-top">
+        <nav class="navbar navbar-inverse navbar-fixed-top navbar-custom">
         	<div id="myNav" class="overlay">
 	           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 				  <ul class="overlay-content">
@@ -51,8 +51,9 @@
 			</div>
 			<div class="container-fluid">
 				<div class="row">
-					  <div class="col-xs-1"><span style="font-size:35px;color:#ff0000;cursor:pointer" onclick="openNav()">&#9776;</span>
+					  <div class="col-xs-9"><span style="font-size:35px;color:#fff;cursor:pointer" onclick="openNav()">&#9776;</span>
 					  </div>
+
 					  <div class="col-md-offset-10 col-xs-offset-8 text-right" id="logo"><a href="http://yeapnetwork.net"><img class="img-rounded" src="img/logo.jpg"></a>
 					  </div>
 				</div>
@@ -82,8 +83,15 @@
 						     loopDelay: 500
 						});
 					</script>
+			       </div>
 
-			      </div>
+			    <!-- Sign in Button -->
+			    <div class="row">
+			    	<div class="col-md-12 text-center">
+			    		<a href="https://sso.secureserver.net/?app=mya&path=%2f%3fci%3d3276%26prog_id%3dyeapnetwork&plid=309511&prog_id=yeapnetwork" class="btn-lg btn-info" role="button">Sign in</a>
+			    	</div>
+			    </div>
+
 			    <div class="row text-center">
 			    	<a href="#home">
 			      		<div class="col-md-offset-11 fa fa-caret-down faa-bounce animated aria-hidden='true'"></div>
