Injected content on the home section and created the sidebar

--- a/include-index.html
+++ b/include-index.html
@@ -77,7 +77,51 @@
         <!-- SECTIONS AND INJECTED VIEWS -->
         <!-- Section home 21ACBA -->
         <section id="home" data-color="#fff">
-        	<div ng-include="'include/home.html'"></div>
+        	<div ng-include="'include/home.html'"></div> <!-- end ng-include -->
+        <div class="container">
+        	<article class="row panel-group">
+		        			<div class="col-sm-4 panel panel-danger">
+						      <div class="panel-heading">
+						      	<h3>Basic Reseller Plan</h3>
+						      </div>
+						      <div class="panel-body">
+						      	<p class="lead">Jump into the fast-paced, lucrative domain name and services business!</p>
+						      </div>
+						      <p class="lead text-danger">Just $199.00</p>
+						      <div class="text-center">
+					    		<a href="#basic-reseller" class="btn-lg btn-info" role="button">More</a>
+					    	  </div><br>
+						    </div>
+
+						    <div class="col-sm-4 panel panel-danger">
+						      <div class="panel-heading">
+						      	<h3>Pro Reseller Plan</h3>
+						      </div>
+						      <div class="panel-body">
+						      	<p class="lead">The BEST buy rates available!</p>
+						      	<p>Get the most form your investment</p>
+						      	<p class="lead text-danger">Just $249.00</p>
+						      	  
+						      </div>
+						      <div class="text-center">
+					    		<a href="#pro-reseller" class="btn-lg btn-info" role="button">More</a>
+					    	  </div><br>
+						    </div>
+
+						    <div class="col-sm-3 col-md-offset-1 panel panel-primary">
+
+						      <div class="panel-heading">
+						      	<h4 class="lead">FREE with Every Plan!</h4>
+						      </div>
+						    <div ng-include="'include/sidebar.html'"></div>
+						      
+					    	  </div><br>
+						    </div>
+		        	</article>
+		          </div>
+
+
+
         	<!-- Font-awesome carets -->
         	<div class="row text-center">
 	        		<div class="col-md-1 col-none992">
@@ -110,6 +154,7 @@
 				      	</a>
 				    </div>
 			    </div> <!-- End font-awesome row -->
+
 			<div class="clear"></div>
         </section>
 
