Added bg-panel-primary background to panel-primary and removed scrool snap on the last section in order to be able to scroll to the footer

--- a/include-index.html
+++ b/include-index.html
@@ -66,7 +66,7 @@
         </nav>
 		      
         <!-- HEADER VIDEO COVER-->
-        <header id="video-header">
+        <header id="video-header" class="snap">
          	<div ng-include="'include/header.html'"></div>
          	<div class="row text-center">
 			    	<a href="#home">
@@ -109,7 +109,7 @@
 					    	  </div><br>
 						    </div>
 
-						    <div class="col-sm-3 col-md-offset-1 panel panel-primary">
+						    <div class="col-sm-3 col-md-offset-1 panel panel-primary bg-panel-primary">
 
 						      <div class="panel-heading">
 						      	<h4 class="lead">FREE with Every Plan!</h4>
@@ -220,7 +220,7 @@
         </section>
 
         <!-- Section contact us -->
-        <section id="contact" class="snap" data-color="#F88F18">
+        <section id="contact" data-color="#F88F18">
         	<div ng-include="'include/contact.html'"></div>
         	<!-- Font-awesome carets -->
 	        	<div class="row text-center">
