--- a/include-index.html
+++ b/include-index.html
@@ -233,7 +233,7 @@
         <section id="contact" data-color="#F88F18">
         	<div ng-include="'include/contact.html'"></div>
         	<!-- Font-awesome carets -->
-	        	<div class="row text-center">
+	        	<!-- <div class="row text-center">
 	        		<div class="col-md-1 col-none992">
 				    	<a href="#my-account">
 				      		<div class="fa fa-caret-up aria-hidden='true'"></div>
@@ -244,12 +244,12 @@
 				      		<div class="fa fa-caret-down aria-hidden='true'"></div>
 				      	</a>
 				    </div>
-			    </div> <!-- End font-awesome row -->
+			    </div> --> <!-- End font-awesome row -->
 			    <div class="clear"></div>
         </section>
 
         <!-- FOOTER-->
-        <footer id="footer" data-color="#222222">
+        <footer id="footer" data-color="#1D6CCD">
         	<div ng-include="'include/footer.html'"></div>
         	<div class="row text-center">
 			    	<a href="#hd-background">
