Fixed the parallax background image

--- a/include-index.html
+++ b/include-index.html
@@ -144,11 +144,11 @@
         </section>
 
         <!-- Section basic reseller -->
-        <section id="basic-reseller" class="parallax snap" data-color="#21ACBA" data-img="img/data-center1.jpg">
+        <section id="basic-reseller" class="snap" data-color="#ADD8E6">
         <div ng-include="'include/basic-reseller.html'"></div>
         	
         	<!-- Font-awesome carets -->
-        	<!-- <div class="row text-center">
+        	 <div class="row text-center">
 	        		<div class="col-md-1 col-none992">
 				    	<a href="#home">
 				      		<div class="fa fa-caret-up aria-hidden='true'"></div>
@@ -159,14 +159,14 @@
 				      		<div class="fa fa-caret-down aria-hidden='true'"></div>
 				      	</a>
 				    </div>
-			    </div> End font-awesome row -->
+			    </div> <!--End font-awesome row -->
  
 			<div class="clear"></div>
         </section>
 
 
         <!-- Section pro reseller -->
-        <section id="pro-reseller" class="snap" data-color="#fff">
+        <section id="pro-reseller" class="parallax snap" data-color="#fff" data-img="img/dedicated-server-data-center-tb.jpg">
         	<div ng-include="'include/pro-reseller.html'"></div>
         	
         	<!-- Font-awesome carets -->
