fixed the RWD with CSS3 media queries

--- a/include-index.html
+++ b/include-index.html
@@ -230,7 +230,7 @@
         </section>
 
         <!-- Section contact us -->
-        <section id="contact" data-color="#F88F18">
+        <section id="contact" data-color="#ADD8E6">
         	<div ng-include="'include/contact.html'"></div>
         	<!-- Font-awesome carets -->
 	        	<!-- <div class="row text-center">
@@ -255,7 +255,8 @@
 			    	<a href="#hd-background">
 			      		<div class="col-xs-12 fa fa-caret-up faa-bounce animated aria-hidden='true'"></div>
 			      	</a>
-			    </div>	
+			    </div>
+			    <div class="clear"></div>	
         </footer>
 
     </body>
