Injected content on Basic reseller section and the pro reseller section

--- a/include-index.html
+++ b/include-index.html
@@ -17,9 +17,7 @@
 	    <link rel="shortcut icon" href="images/favicon.ico">-->
 
 	    <!-- SCROLLS -->
-	    <!-- load css and fontawesome-->
-	    <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
-	    -->
+	    <!-- load css and fontawesome-->	    
 	    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Fugaz+One|Ultra" rel="stylesheet">
 	    <link rel="stylesheet" type="text/css" href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 		<link rel="stylesheet" type="text/css" href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.9/font-awesome-animation.min.css'>
@@ -52,7 +50,7 @@
 				    <li><a href="#home">Home</a></li>
 				    <li><a href="#basic-reseller">Basic Reseller</a></li>
 				    <li><a href="#pro-reseller">Pro Reseller</a></li>
-				    <li><a href="#support">Customer Support</a></li>
+				    <li><a href="#support">Support</a></li>
 				    <li><a href="#my-account">My Account</a></li>
 				    <li><a href="#contact">Contact us</a></li>
 				  </ul>
@@ -113,7 +111,7 @@
 					    	  </div><br>
 						    </div>
 
-						    <div class="col-sm-3 col-md-offset-1 panel panel-primary bg-panel-primary">
+						    <div class="col-sm-4 panel panel-primary bg-panel-primary">
 
 						      <div class="panel-heading">
 						      	<h4 class="lead">FREE with Every Plan!</h4>
@@ -144,7 +142,7 @@
         </section>
 
         <!-- Section basic reseller -->
-        <section id="basic-reseller" class="snap" data-color="#ADD8E6">
+        <section id="basic-reseller" class="snap" data-color="#008B8B">
         <div ng-include="'include/basic-reseller.html'"></div>
         	
         	<!-- Font-awesome carets -->
