--- a/include-index.html
+++ b/include-index.html
@@ -52,14 +52,19 @@
 				    <li><a href="#my-account">My Account</a></li>
 				    <li><a href="#support">Support</a></li>
 				    <li><a href="#contact">Contact us</a></li>
-				  </ul>
+				  </ul>	  			
 			</div>
+
 			<div class="container-fluid">
 				<div class="row">
-					  <div class="col-xs-1"><span style="font-size:35px;color:#fff;cursor:pointer" onclick="openNav()">&#9776;</span>
+					  <div class="col-xs-1">
+					  		<span style="font-size:35px;color:#fff;cursor:pointer" onclick="openNav()">&#9776;</span>
+					  </div>
+					  <div class="col-xs-5 login">
+					  		<i class="fa fa-sign-in" aria-hidden="true"></i><a href="https://sso.secureserver.net/?app=mya&path=%2f%3fci%3d3276%26prog_id%3dyeapnetwork&plid=309511&prog_id=yeapnetwork"> LOGIN</a>
 					  </div>
 
-					  <div class="col-md-offset-10 col-xs-offset-8 text-right" id="logo">
+					  <div class="col-xs-5 col-xs-offset-1 text-right" id="logo">
 					  		<a href="http://yeapnetwork.net"><img class="img-rounded" src="img/logo.jpg"></a>
 					  </div>
 				</div>
