Made it SEO friendly

--- a/include-index.html
+++ b/include-index.html
@@ -8,10 +8,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	    <!-- Basic page information -->
-		<meta name="description" content="">
+		<meta name="description" content="Jump into the fast-paced, lucrative domain name, hosting and services business, check out our reseller plans, we provide you with everything you need: products, support, even a professional web site. And with our turnkey setup, your site is online from the moment you sign up!">
 		<meta name="keywords" content="">
 		<meta name="author" content="Clas-design">
-	    <title></title>
+	    <title>Make money now with the hottest reseller plan around</title>
 
 	    <!-- Fav Icon 
 	    <link rel="shortcut icon" href="images/favicon.ico">-->
